<resources>
    <string name="app_name">SoftSquared Android Kotlin Template</string>
    <string name="test">test</string>
    <string name="next">다음</string>
    <string name="id">hyewon__ovo</string>

    <!-- Naming Rules -->
    <!-- 도메인명_컴포넌트함축어_용도(=목적) -->

    <!-- Common -->

    <!-- Main -->
    <string name="main_btm_nav_home_title">홈</string>
    <string name="main_btm_nav_my_page_title">마이페이지</string>

    <!-- Home -->
    <string name="home_btn_try_get_http_method">GET API 보내기</string>
    <string name="home_btn_try_post_http_method">POST API 보내기</string>
    <string name="home_et_id">아이디를 입력하세요.</string>
    <string name="home_et_pw">비밀번호를 입력하세요.</string>

    <!-- MyPage -->
    <string name="my_page_tv_counter">%1d 번 눌렀습니다.</string>
    <string name="my_page_btn_counting_number">숫자 세기</string>
    <string name="kakao_app_key">90366e20feca2ef911da795810e23e8b</string>



    <!-- Login -->
    <string name="login_main_et_id">아이디</string>
    <string name="login_main_et_pwd">비밀번호</string>
    <string name="login_main_tv_forget_pwd">비밀번호를 잊으셨나요?</string>
    <string name="login_main_tv_login">로그인</string>
    <string name="login_main_tv_or">또는</string>
    <string name="login_main_tv_facebook">Facebook으로 로그인</string>
    <string name="login_main_tv_noti">계정이 없으신가요?</string>
    <string name="login_main_tv_sign_up">가입하기</string>
    <string name="login_tv_other_login">다른 계정으로 로그인</string>
    <string name="login_tv_btm">Instagram에 처음 오셨나요?</string>


    <!-- SignUp -->

    <string name="sign_up_main_top">전화번호 또는 이메일 \n주소 입력</string>
    <string name="sign_up_main_phone_num">전화번호</string>
    <string name="sign_up_main_email">이메일</string>
    <string name="sign_up_main_con">KR +82</string>
    <string name="sign_up_main_noti">Instagram의 업데이트 내용을 SMS로 수신할 수 있으며, 언제든지 수신을 취소할 수 있습니다.</string>
    <string name="sign_up_main_login_noti">이미 계정이 있으신가요?</string>



    <!-- mypage -->
    <string name="mypage_posting">게시물</string>
    <string name="mypage_follower">팔로워</string>
    <string name="mypage_following">팔로잉</string>
    <string name="mypage_profile_edit">프로필 편집</string>
</resources>