<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/sign_up_main_topbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="15dp"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:elevation="100dp"
        android:src="@drawable/back_icon"
        app:layout_constraintBottom_toBottomOf="@id/sign_up_main_topbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/sign_up_main_topbar" />


    <TextView
        android:id="@+id/sign_up_main_vi_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_main_top"
        android:textSize="25sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_main_topbar"
        android:layout_marginTop="5dp"
        />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/sign_up_main_tbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_main_vi_top"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp"
        >
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_main_phone_num"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_main_email"/>
    </com.google.android.material.tabs.TabLayout>



    <EditText
        android:textColor="@color/black"
        android:id="@+id/sign_up_main_et_num"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/et_border"
        android:paddingVertical="10dp"
        android:paddingLeft="20dp"
        android:textColorHint="@color/editTextHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_main_tbl" />


    <androidx.cardview.widget.CardView
        android:id="@+id/sign_up_main_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/cv_border"
        app:cardBackgroundColor="@color/mainColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_main_et_num">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="13dp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_main_cv"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up_main_noti"
        android:textSize="13sp"
        android:paddingHorizontal="70dp"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/sign_up_main_gl_btm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@color/viewOr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_main_gl_btm"
        />


    <LinearLayout
        android:id="@+id/sign_up_main_ll_login"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:textColor="@color/notiColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_main_login_noti"
            android:textStyle="bold"

            />

        <TextView
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_main_tv_login"
            android:textColor="@color/mainColor"
            android:textStyle="bold"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>