<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/login_main_topbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="15dp"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:elevation="100dp"
        android:src="@drawable/back_icon"
        app:layout_constraintBottom_toBottomOf="@id/login_main_topbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/login_main_topbar" />


    <ImageView
        android:id="@+id/login_main_logo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/login_logo"
        app:layout_constraintBottom_toTopOf="@+id/login_main_id_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_main_topbar" />

    <EditText
        android:textColor="@color/black"
        android:id="@+id/login_main_id_et"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/et_border"
        android:hint="@string/login_main_et_id"
        android:paddingVertical="10dp"
        android:paddingLeft="20dp"
        android:textColorHint="@color/editTextHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_main_logo" />

    <EditText
        android:textColor="@color/black"

        android:id="@+id/login_main_pwd_et"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/et_border"
        android:hint="@string/login_main_et_pwd"
        android:paddingVertical="10dp"
        android:paddingLeft="20dp"
        android:textColorHint="@color/editTextHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_main_id_et" />


    <TextView
        android:id="@+id/login_main_tv_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:text="@string/login_main_tv_forget_pwd"
        android:textColor="@color/mainColor"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_main_pwd_et" />


    <androidx.cardview.widget.CardView
        android:id="@+id/login_main_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/cv_border"
        app:cardBackgroundColor="@color/mainColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_main_tv_forget_pwd">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="13dp"
            android:text="@string/login_main_tv_login"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/login_main_ll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_main_cv">

        <View
            android:layout_width="0dp"
            android:layout_height="1.5dp"
            android:layout_gravity="center"
            android:layout_weight="1.5"
            android:background="@color/viewOr" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/login_main_tv_or"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="1.5dp"
            android:layout_gravity="center"
            android:layout_weight="1.5"
            android:background="@color/viewOr" />
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_main_ll">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/facabook_icon"
            android:layout_gravity="center"/>

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_main_tv_facebook"
            android:textColor="@color/mainColor"
            android:textStyle="bold"/>

    </LinearLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_main_gl_btm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@color/viewOr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_main_gl_btm"
        />


    <LinearLayout
        android:id="@+id/login_main_ll_sign_up"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:textColor="@color/notiColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_main_tv_noti"
            android:textStyle="bold"

            />

        <TextView
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_main_tv_sign_up"
            android:textColor="@color/mainColor"
            android:textStyle="bold"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>